--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,7 @@
 <body>
     {{>header}}
     <div class="main-content">
-        <img class ="portrait" src="img/test.png">
+        <img class ="portrait" src="img/test.jpg">
         <p>Created by {{name}}</p>
     </div>
   
